Fix inbox style on ios

--- a/src/styl/inbox.styl
+++ b/src/styl/inbox.styl
@@ -11,9 +11,10 @@
   display flex
   flex-flow row nowrap
   >.composeAction
-    flex 50% 1 1
+    flex 1 1 50%
+    margin-bottom 0
   > .navigationButtons
-    flex 50% 1 1
+    flex 1 1 50%
     display flex
     flex-flow row nowrap
     justify-content center
